--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ Assets/ADG_Textures/
 Assets/epyphany/
 Assets/SkyBox Volume 2/
 Assets/SpaceShipPack/
+Assets/AstraStarshipPackage1/
+Assets/Modular Space Raider/
